--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+      <div class="funbus">Fun Bus</div>
+        <img class="buspic" src="img\fun-bus.jpg">
+          <h1>Welcome To Fun Bus!</h1>
+            <p>Traveling expedition modern, clean webdesign bloggerclean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+
+  </header>
 
   
      
@@ -64,7 +77,11 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
-  </div><!-- container -->
+  </div>
+  
+  <button>Sign Me up!</button>
+  <button>Sign Me up!</button>
+  <button>Sign Me up!</button>
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
